fix blank space bug